[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.262",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "pytest>=7.3.1",
    "pytest-sugar>=0.9.7",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "daniel daum", email = "daniel_daum@outlook.com"},
]
dependencies = [
    "pygame>=2.3.0",
]
requires-python = ">=3.11"
license = {text = "None"}
